add bootstrap container class

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -17,7 +17,7 @@
   <script src="../js/app.js"></script>
 </head>
 <body>
-  <div id="page-wrapper" class="well">
+  <div id="page-wrapper" class="container">
     <!-- header -->
     <header class="page-header">
       <h1>ToEat.ly <small>Put it in my belly!</small></h1>
