--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,6 +30,34 @@
 </body>
   <!-- Underscore template -->
   <script type="text/template" id="tmpl-greeting-example">
-    <p><%= greeting ></p>
+    <p><%= greeting %></p>
   </script>
+
+<script type="text/template" id="tmpl-loop-example">
+  <p>
+    <h4><%= name %></h4>
+    <% list.forEach(function(item){ %>
+      <strong><%= item %></strong>
+    <% }) %>
+  </p>
+</script>
+
+
+
+
+
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
